# Parallel_programming

./: CMakeLists.txt  matrixA.txt  matrixB.txt  multiply.cpp  result.txt  verify.py  Отчет.docx
Laba_1/: CMakeLists.txt  README.md  matrixA_200.txt  matrixA_400.txt  matrix_mul.cpp  result_200.txt  result_400.txt  results.csv  run_experiments.py
Laba_2/: CMakeLists.txt  README.md  generate_matrices.py  matrixA_400.txt  matrixB_200.txt  matrix_mul.cpp  result_200_8.txt  result_400_8.txt  results.csv  run_and_plot.py  run_experiments.bat
Laba_3/: CMakeLists.txt  README.md  matrixA_400.txt  matrixB_200.txt  matrix_mul  result_200.txt  result_400.txt  results_mpi.csv  verify.py
Laba_4/: README.md  cuda_results.csv  generate_matrices.py  matrixB_512.txt  matrix_mul_cuda.cu  result_512.txt  run_cuda_experiments.py
Laba_5/: CMakeLists.txt  MPI.pbs  README.md  matrixA_200.txt  matrixB_400.txt  matrix_mul.cpp  result_200.txt  result_400.txt  run_experiments.py
